# RustMesh

./: .gitignore  .gitmodules  BENCHMARK_SIMD_2026-02-11.md  CLAUDE.md  Cargo.toml  GAP_ANALYSIS.md  GAP_ANALYSIS_UPDATE.md  LARGE_MESH_COMPARISON.md  PERFORMANCE_ANALYSIS.md  PERFORMANCE_BENCHMARK_2026-02-12.md  PERFORMANCE_COMPARISON.md  PERFORMANCE_FINAL.md  PERFORMANCE_OPTIMIZATION.md  PERFORMANCE_SIMD.md  PERFORMANCE_UPDATE.md  PERFORMANCE_USER_MODEL.md  PROJECT_STRUCTURE.md  README.md  ROADMAP.md  TEST_DATA.md  run_examples.sh  test_ns.rs  test_ns_fixed
.github/workflows/: ci.yml
RustMesh/: ATTRIB_SOA_KERNEL_DESIGN.md  Cargo.toml  PROJECT_STRUCTURE.md  README.md  ROADMAP.md  Review.md  test_ns  test_ns_fixed.rs
RustMesh/src/: lib.rs
RustSLAM/: Cargo.toml  README.md  ToDo.md
RustSLAM/examples/: e2e_slam_to_mesh.rs  load_tum_dataset.rs  test_marching_cubes.rs  test_optimization_thread.rs  test_video_loader.rs
RustSLAM/output/: epic-issues.md  results.json
_bmad-output/: project-context.md
benches/: benchmarks.rs
benchmark/: RustMesh_Feature_Comparison.md
docs/: API.md  ARCHITECTURE.md  DEVELOPMENT.md  PROJECT-SCAN-SUMMARY.md  index.md
examples/: bench.rs
rustmesh/: RUSTMESH_VS_OPENMESH_COMPARISON.md
src/: connectivity.rs  connectivity.rs.bak  decimater.rs  dualizer.rs  geometry.rs  handles.rs  high_perf_mesh.rs  hole_filler.rs  io.rs  items.rs  kernel.rs  lib.rs  mesh_checker.rs  om_format.rs  performance.rs  simd_mesh.rs  simd_ops.rs  smart_handles.rs  smoother.rs  soa_kernel.rs  subdivider.rs  test_data.rs  tri_connectivity.rs
(+143 files in other folders)
